--- a/styles/text.css
+++ b/styles/text.css
@@ -42,6 +42,10 @@ p {
   font-size: 14px;
 }
 
+ul li p {
+  margin-bottom: 0.8rem;
+}
+
 @media(max-width: 500px) {
   .license-to-plate-container h1,
   .setlist-wizard-container h1 {
